--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="black">
+    <meta name="author" content="Adarsh Mishra">
+    <meta name="keywords" content="Adarsh Mishra , Web Developer , Dev, Adarsh, Mishra, India , Web Technology , Create website, Reactjs , nodejs , html,css, bootstrap,how to make website, need portfolio, adarsh portfolio">
+    <meta name="description" content="Computer Engineering student who loves developing websites.">
     <title>Adarsh Mishra</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" />
