--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col col-md-4  me text-center pr-1">
-                    <img src="images/me.png" class="image-fluid" alt="Adarsh Mishra">
+                    <img src="images/me.png" class="image-fluid" alt="Adarsh Mishra" title="">
                 </div>
                 <div class="col col-md-8 ">
                     <div class="name">
@@ -78,19 +78,19 @@
             <div class="row justify-content-around my-5">
                 <div class="col-12 col-md-3  my-3">
                     <div class="project-body">
-                        <img src="images/LongShort.png" alt="">
+                        <img src="images/LongShort.png" alt="LongShort">
                     </div>
                     <div class="title">LongShort</div>
                 </div>
                 <div class="col-12 col-md-3 my-3">
                     <div class="project-body">
-                        <img src="images/hackarena.png" alt="">
+                        <img src="images/hackarena.png" alt="HackArena">
                     </div>
                     <div class="title">HackArena</div>
                 </div>
                 <div class="col-12 col-md-3 my-3">
                     <div class="project-body">
-                        <img src="images/chat app.png" alt="">
+                        <img src="images/chat app.png" alt="Chat App">
                     </div>
                     <div class="title">Realtime Chat App</div>
                 </div>
@@ -105,7 +105,7 @@
             <div class="row my-4 py-2">
                 <div class="col-12 col-md-3 j">
                     <div class="companyLogo  my-2">
-                        <img src="images/dcodetech.png" class="image-fluid bg-light" alt="">
+                        <img src="images/dcodetech.png" class="image-fluid bg-light" alt="dcodetech">
                     </div>
                 </div>
                 <div class="col-12 col-md-9 right">
@@ -120,7 +120,7 @@
             <div class="row my-4">
                 <div class="col-12 col-md-3 py-2">
                     <div class="companyLogo  my-2">
-                        <img src="https://img.icons8.com/fluent/50/000000/hard-working.png" alt="">
+                        <img src="https://img.icons8.com/fluent/50/000000/hard-working.png" alt="icon">
                     </div>
                 </div>
                 <div class="col-12 col-md-9 right">
@@ -144,7 +144,7 @@
                 <h2 class="col-12 text-center py-4">Programming &amp; Scripting Languages</h2>
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/css3.png" alt=""></div>
+                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/css3.png" alt="icon"></div>
                     </div>
                     <div class="title ">CSS</div>
                     <div class="baaar">
@@ -154,7 +154,7 @@
 
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/php.png" alt=""></div>
+                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/php.png" alt="icon"></div>
                     </div>
                     <div class="title ">PHP</div>
                     <div class="baaar">
@@ -164,7 +164,7 @@
 
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/python.png" alt=""></div>
+                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/python.png" alt="icon"></div>
                     </div>
                     <div class="title">Python</div>
                     <div class="baaar">
@@ -173,7 +173,7 @@
                 </div>
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/html-5.png" alt=""></div>
+                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/html-5.png" alt="icon"></div>
                     </div>
                     <div class="title">HTML</div>
                     <div class="baaar">
@@ -186,7 +186,7 @@
                 <h2 class="col-12 text-center py-4">Frameworks &amp; Libraries</h2>
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/nodejs.png" alt=""></div>
+                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/nodejs.png" alt="icon"></div>
                     </div>
                     <div class="title">NodeJs</div>
                     <div class="baaar">
@@ -195,7 +195,7 @@
                 </div>
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/bootstrap.png" alt=""></div>
+                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/bootstrap.png" alt="icon"></div>
                     </div>
                     <div class="title">Bootstrap</div>
                     <div class="baaar">
@@ -204,7 +204,7 @@
                 </div>
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/react-native.png" alt="">
+                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/react-native.png" alt="icon">
                         </div>
                     </div>
                     <div class="title">React</div>
@@ -217,7 +217,7 @@
                 <h2 class="col-12 text-center py-4">Tools &amp; Tech</h2>
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/adobe-photoshop.png" alt="">
+                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/adobe-photoshop.png" alt="icon">
                         </div>
                     </div>
                     <div class="title">Photoshop</div>
@@ -227,7 +227,7 @@
                 </div>
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/windows/64/000000/figma.png" alt=""></div>
+                        <div class="icon"><img src="https://img.icons8.com/windows/64/000000/figma.png" alt="icon"></div>
                     </div>
                     <div class="title">Figma</div>
                     <div class="baaar">
@@ -237,7 +237,7 @@
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
                         <div class="icon"><img src="https://img.icons8.com/color/60/000000/adobe-illustrator.png"
-                                alt="">
+                                alt="icon">
                         </div>
                     </div>
                     <div class="title">Illustrator</div>
@@ -247,7 +247,7 @@
                 </div>
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/mongodb.png" alt=""></div>
+                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/mongodb.png" alt="icon"></div>
                     </div>
                     <div class="title">MongoDb</div>
                     <div class="baaar">
@@ -256,7 +256,7 @@
                 </div>
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/ios-filled/60/000000/mysql-logo.png" /></div>
+                        <div class="icon"><img src="https://img.icons8.com/ios-filled/60/000000/mysql-logo.png"  alt="icon"></div>
                     </div>
                     <div class="title">MySQL</div>
                     <div class="baaar">
