--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav>
 
         <div class="navbar-brand">Adarsh Mishra</div>
-        <div class="toggle"><i class="fa fa-bars" id="m-icon"></i> </div>
+        <div class="toggle"><i class="fa fa-bars" id="m-icon"></i></div>
         <ul class="main-nav">
             <li><a href="#projects"><i class="fas fa-laptop-code"></i> Projects</a></li>
             <li><a href="#experience"><i class="fas fa-laptop"></i> Experience</a></li>
@@ -45,14 +45,13 @@
         </div>
 
     </div> -->
-
     <div id="intro">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col col-md-4  me text-center pr-1">
-                    <img src="images/me.png" class="image-fluid" alt="Adarsh Mishra" title="">
+                <div class="col-12 col-md-4  me text-center pr-1">
+                    <img src="images/mea.png" class="image-fluid" alt="Adarsh Mishra" title="">
                 </div>
-                <div class="col col-md-8 ">
+                <div class="col-12 col-md-8 ">
                     <div class="name">
                         <span>Adarsh</span> Mishra
                         <div class="designation mb-2">Computer Engineer</div>
@@ -76,19 +75,25 @@
         <div class="container">
             <h1 class="pb-4"><i class="fas fa-laptop-code"></i> Projects</h1>
             <div class="row justify-content-around my-5">
-                <div class="col-12 col-md-3  my-3">
+                <div class="col-12 col-md-4  my-3">
                     <div class="project-body">
-                        <img src="images/LongShort.png" alt="LongShort">
+                        <a href="http://adarsh-blog.herokuapp.com" target="blank"><img src="images/blogging.png" alt="Blogging"></a>
+                    </div>
+                    <div class="title">Blogging Website</div>
+                </div>
+                <div class="col-12 col-md-4  my-3">
+                    <div class="project-body">
+                        <a href="http://longshort.me" target="blank"><img src="images/LongShort.png" alt="LongShort"></a>
                     </div>
                     <div class="title">LongShort</div>
                 </div>
-                <div class="col-12 col-md-3 my-3">
+                <div class="col-12 col-md-4 my-3">
                     <div class="project-body">
                         <img src="images/hackarena.png" alt="HackArena">
                     </div>
                     <div class="title">HackArena</div>
                 </div>
-                <div class="col-12 col-md-3 my-3">
+                <div class="col-12 col-md-4 my-3">
                     <div class="project-body">
                         <img src="images/chat app.png" alt="Chat App">
                     </div>
