--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="black">
     <meta name="author" content="Adarsh Mishra">
-    <meta name="keywords" content="Adarsh Mishra , Web Developer , Dev, Adarsh, Mishra, India , Web Technology , Create website, Reactjs , nodejs , html,css, bootstrap,how to make website, need portfolio, adarsh portfolio">
+    <meta name="keywords"
+        content="Adarsh Mishra , Web Developer , Dev, Adarsh, Mishra, India , Web Technology , Create website, Reactjs , nodejs , html,css, bootstrap,how to make website, need portfolio, adarsh portfolio">
     <meta name="description" content="Computer Engineering student who loves developing websites.">
     <title>Adarsh Mishra</title>
 
@@ -56,15 +57,22 @@
                     <div class="name">
                         <span>Adarsh</span> Mishra
                         <div class="designation mb-2">Computer Engineer</div>
-                        <div class="description">Hey ,I am Adarsh Mishra ,I am a currently pursuing my Computer
-                            Engineering Degree from Lokmanya Tilak College of Engineering. I love developing websites
-                            and looking forward to learn all technologies related to it.</div>
+                        <div class="description">Hey, I am Adarsh Mishra, currently pursuing a degree in Computer
+                            Engineering from Lokmanya Tilak College of Engineering. Steve Jobs once said, <i> "The only way
+                            to do great work is to love what you do"</i> and, this is the principle I have been following
+                            throughout my journey as a Web Developer. Developing websites is not only a job for me, but
+                            it is also my passion which helps to portray my creativity into something as small as a
+                            computer or a mobile screen.</div>
                     </div>
                     <div class="social mt-4">
-                        <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/adarshmishra07/" target="blank"><i class="fab fa-linkedin"></i></a>
-                        <a class="btn btn-social-icon btn-github" href="https://github.com/adarshmishra07" target="blank"><i class="fab fa-github"></i></a>
-                        <a class="btn btn-social-icon btn-google" href="mailto:adarshmishra0701@gmail.com"><i class="fa fa-envelope"></i></a>
-                        <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/adarsh_mishra_/" target="blank"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/adarshmishra07/"
+                            target="blank"><i class="fab fa-linkedin"></i></a>
+                        <a class="btn btn-social-icon btn-github" href="https://github.com/adarshmishra07"
+                            target="blank"><i class="fab fa-github"></i></a>
+                        <a class="btn btn-social-icon btn-google" href="mailto:adarshmishra0701@gmail.com"><i
+                                class="fa fa-envelope"></i></a>
+                        <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/adarsh_mishra_/"
+                            target="blank"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
 
@@ -78,13 +86,15 @@
             <div class="row justify-content-around my-5">
                 <div class="col-12 col-md-4  my-3">
                     <div class="project-body">
-                        <a href="http://adarsh-blog.herokuapp.com" target="blank"><img src="images/blogging.png" alt="Blogging"></a>
+                        <a href="http://adarsh-blog.herokuapp.com" target="blank"><img src="images/blogging.png"
+                                alt="Blogging"></a>
                     </div>
                     <div class="title">Blogging Website</div>
                 </div>
                 <div class="col-12 col-md-4  my-3">
                     <div class="project-body">
-                        <a href="http://longshort.me" target="blank"><img src="images/LongShort.png" alt="LongShort"></a>
+                        <a href="http://longshort.me" target="blank"><img src="images/LongShort.png"
+                                alt="LongShort"></a>
                     </div>
                     <div class="title">LongShort</div>
                 </div>
@@ -101,8 +111,9 @@
                     <div class="title">Realtime Chat App</div>
                 </div>
             </div>
-            <div class="text text-center">View all my projects on <a class="btn btn-social btn-github" href="https://github.com/adarshmishra07?tab=repositories"><i
-                        class="fab fa-github"></i>Github</a></div>
+            <div class="text text-center">View all my projects on <a class="btn btn-social btn-github"
+                    href="https://github.com/adarshmishra07?tab=repositories"><i class="fab fa-github"></i>Github</a>
+            </div>
         </div>
     </div>
     <div id="experience">
@@ -118,8 +129,9 @@
                     <div class="company-name">Dcodetech</div>
                     <div class="date">Dec 2019 - Jan 2020</div>
                     <div class="description py-2">
-                        Worked as an Intern Developer at Decodetech. Developed a web templates for Cake Shop. Template also had User Registration, Login and product Checkout Page
-                        using PHP and MySQL 
+                        Worked as an Intern Developer at Decodetech. Developed a web templates for Cake Shop. Template
+                        also had User Registration, Login and product Checkout Page
+                        using PHP and MySQL
                     </div>
                 </div>
             </div>
@@ -133,9 +145,11 @@
                     <div class="company-name">Freelancer</div>
                     <div class="date">Current</div>
                     <div class="description py-2">
-                        <li>Website for <a href="http://littlekidsnursery.in" target="blank">Little Kids Nursery School</a></li>
+                        <li>Website for <a href="http://littlekidsnursery.in" target="blank">Little Kids Nursery
+                                School</a></li>
                         <li>Portfolio website for <a href="http://omkarmohite.me" target="blank">Omkar Mohite</a></li>
-                        <li>Portfolio website for <a href="http://pavankarajgar.me" target="blank">Pavan Karajgar</a></li>
+                        <li>Portfolio website for <a href="http://pavankarajgar.me" target="blank">Pavan Karajgar</a>
+                        </li>
 
                     </div>
                 </div>
@@ -201,7 +215,8 @@
                 </div>
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/bootstrap.png" alt="icon"></div>
+                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/bootstrap.png" alt="icon">
+                        </div>
                     </div>
                     <div class="title">Bootstrap</div>
                     <div class="baaar">
@@ -223,7 +238,8 @@
                 <h2 class="col-12 text-center py-4">Tools &amp; Tech</h2>
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/adobe-photoshop.png" alt="icon">
+                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/adobe-photoshop.png"
+                                alt="icon">
                         </div>
                     </div>
                     <div class="title">Photoshop</div>
@@ -233,7 +249,8 @@
                 </div>
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/windows/64/000000/figma.png" alt="icon"></div>
+                        <div class="icon"><img src="https://img.icons8.com/windows/64/000000/figma.png" alt="icon">
+                        </div>
                     </div>
                     <div class="title">Figma</div>
                     <div class="baaar">
@@ -253,7 +270,8 @@
                 </div>
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/mongodb.png" alt="icon"></div>
+                        <div class="icon"><img src="https://img.icons8.com/color/60/000000/mongodb.png" alt="icon">
+                        </div>
                     </div>
                     <div class="title">MongoDb</div>
                     <div class="baaar">
@@ -262,7 +280,8 @@
                 </div>
                 <div class="col-6 col-sm-4 col-md-2">
                     <div class="percentage">
-                        <div class="icon"><img src="https://img.icons8.com/ios-filled/60/000000/mysql-logo.png"  alt="icon"></div>
+                        <div class="icon"><img src="https://img.icons8.com/ios-filled/60/000000/mysql-logo.png"
+                                alt="icon"></div>
                     </div>
                     <div class="title">MySQL</div>
                     <div class="baaar">
@@ -283,11 +302,12 @@
                         <div class="degree">BE (Computer Science)</div>
                         <div class="date">Present</div>
                         <div class="description mt-2">
-                            Pursuing my Degree, I developed interest in Web Development.I started with designing a
-                            website for <a href="https://csi-cesa.github.io">CSI-CESA Club</a> of the Deparment then
-                            further ,I made a website for the hackathon (HackArena) to be conducted and many small web
-                            related projects which you can checkout on <a href="https://github.com/adarshmishra07?tab=repositories" class="btn btn-social btn-github"><i
-                                    class="fab fa-github"></i>Github</a>
+                            Pursuing my degree, I gradually cultivated an interest in Web Development, and then I
+                            started with designing a website for <a href="https://csi-cesa.github.io">CSI-CESA Club</a>
+                            of the Computers Department. Furthermore, I created a website for the HackArena hackathon to
+                            be conducted in our college and also made some small web-related projects which you can
+                            check out on <a href="https://github.com/adarshmishra07?tab=repositories"
+                                class="btn btn-social btn-github"><i class="fab fa-github"></i>Github</a>
 
                         </div>
                     </div>
@@ -315,7 +335,8 @@
                     </div>
                     <div class="form-group row justify-content-around my-5">
                         <label class="col-12 col-md-2" for="message">Message</label>
-                        <div class="col-12 col-md-8"><textarea class="form-control" id="message" rows="3"required minlength="50"> </textarea>
+                        <div class="col-12 col-md-8"><textarea class="form-control" id="message" rows="3" required
+                                minlength="50"> </textarea>
                         </div>
                     </div>
                     <div class="form-group row justify-content-around justify-content-sm-center my-5">
@@ -325,10 +346,15 @@
 
                 </form>
                 <div class="row justify-content-around pb-3">
-                    <a class="btn btn-social-icon btn-linkedin btn-lg" href="https://www.linkedin.com/in/adarshmishra07/ " target="blank"><i class="fab fa-linkedin"></i></a>
-                    <a class="btn btn-social-icon btn-github btn-lg" href="https://github.com/adarshmishra07" target="blank"><i class="fab fa-github"></i></a>
-                    <a class="btn btn-social-icon btn-google btn-lg" href="mailto:adarshmishra0701@gmail.com"><i class="fa fa-envelope"></i></a>
-                    <a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/adarsh_mishra_/" target="blank"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-social-icon btn-linkedin btn-lg"
+                        href="https://www.linkedin.com/in/adarshmishra07/ " target="blank"><i
+                            class="fab fa-linkedin"></i></a>
+                    <a class="btn btn-social-icon btn-github btn-lg" href="https://github.com/adarshmishra07"
+                        target="blank"><i class="fab fa-github"></i></a>
+                    <a class="btn btn-social-icon btn-google btn-lg" href="mailto:adarshmishra0701@gmail.com"><i
+                            class="fa fa-envelope"></i></a>
+                    <a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/adarsh_mishra_/"
+                        target="blank"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
