--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
 
             </div>
-            <div class="knowmore text-center mt-4"><a href="#projects" class="btn">Know More</a></div>
+            <div class="knowmore text-center mt-4"><a href="#projects" class="btn submit-btn">Know More</a></div>
         </div>
     </div>
     <div id="projects">
@@ -123,16 +123,18 @@
             <div class="row my-4 py-2">
                 <div class="col-12 col-md-3 j">
                     <div class="companyLogo  my-2">
-                        <img src="images/dcodetech.png" class="image-fluid bg-light" alt="dcodetech">
+                        <img src="images/dcodetech.png" class="image-fluid" alt="dcodetech">
                     </div>
                 </div>
                 <div class="col-12 col-md-9 right">
-                    <div class="company-name">Dcodetech</div>
+                    <div class="company-name">Intern Developer at Dcodetech</div>
                     <div class="date">Dec 2019 - Jan 2020</div>
                     <div class="description py-2">
-                        Worked as an Intern Developer at Decodetech. Developed a web templates for Cake Shop. Template
-                        also had User Registration, Login and product Checkout Page
-                        using PHP and MySQL
+                        <li> Developed a web templates for Cake Shop</li>
+                        <li> Template
+                        also had User Registration</li>
+                        <li> Login and product Checkout Page
+                        using PHP and MySQL</li>
                     </div>
                 </div>
             </div>
@@ -321,7 +323,7 @@
         <div class="container">
             <h1 class="pb-4"><i class="fas fa-user"></i> Contact</h1>
             <div class="form-container">
-                <div class="text-center">Use this form of connect with me through socials</div>
+                <div class="text-center">Use this form to connect with me or through socials</div>
                 <form id="getintouch">
                     <div class="form-group row justify-content-around my-5">
                         <label class="col-12 col-md-2" for="senderName">Name</label>
@@ -341,7 +343,7 @@
                         </div>
                     </div>
                     <div class="form-group row justify-content-around justify-content-sm-center my-5">
-                        <div class="col-12 col-md-12 offset-md-7"><button type="submit" class="btn">Submit</button>
+                        <div class="col-12 col-md-12 offset-md-7"><button type="submit" class="btn submit-btn">Submit</button>
                         </div>
                     </div>
 
