--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <meta name="author" content="Adarsh Mishra">
     <meta name="keywords"
         content="Adarsh Mishra , Web Developer , Dev, Adarsh, Mishra, India , Web Technology , Create website, Reactjs , nodejs , html,css, bootstrap,how to make website, need portfolio, adarsh portfolio">
-    <meta name="description" content="Computer Engineering student who loves developing websites.">
+    <meta name="description" content="Hey, I am Adarsh Mishra, currently pursuing a degree in Computer
+    Engineering from Lokmanya Tilak College of Engineering. Steve Jobs once said, The only way
+    to do great work is to love what you do and, this is the principle I have been following
+    throughout my journey as a Web Developer. Developing websites is not only a job for me, but
+    it is also my passion which helps to portray my creativity into something as small as a
+    computer or a mobile screen.">
     <title>Adarsh Mishra</title>
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
